Openshift/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: opendrive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: image-registry.openshift-image-registry.svc:5000/opendrive/backend:latest
          ports:
            - containerPort: 8080
