Openshift/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: opendrive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: image-registry.openshift-image-registry.svc:5000/opendrive/frontend:latest
          ports:
            - containerPort: 8080
