Openshift/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: opendrive
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
