Openshift/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: opendrive
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
